--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -290,48 +290,66 @@ article:hover * {
 
 /* ----------------------------------------------- */
 /* TRAIT DE SEPARATION */
-#LNE.menu h3 {
+#LNE.menu .trait {
+  text-align: center;
   background: no-repeat left url("../../images/ligne1.png"), no-repeat right url("../../images/ligne1.png");
 }
 
-#LCALF.menu .orange h3 {
+#LCALF.menu .orange .trait {
+  text-align: center;
   margin-left: -70px;
   margin-right: -70px;
   background: no-repeat left url("../../images/ligne2.png"), no-repeat right url("../../images/ligne3.png");
 }
-#LCALF.menu .violet h3 {
+#LCALF.menu .violet .trait {
+  text-align: center;
   margin-left: -70px;
   margin-right: -70px;
   background: no-repeat left url("../../images/ligne4.png"), no-repeat right url("../../images/ligne5.png");
 }
-#LCALF.menu .bleu h3 {
+#LCALF.menu .bleu .trait {
+  text-align: center;
   margin-left: -70px;
   margin-right: -70px;
   background: no-repeat left url("../../images/ligne6.png"), no-repeat right url("../../images/ligne7.png");
 }
 
 #LDDP.menu .trait-bleu-fonce {
+  text-align: center;
   margin-left: 20px;
   margin-right: 20px;
   background: no-repeat left url("../../images/ligne8.png"), no-repeat right url("../../images/ligne9.png");
 }
 #LDDP.menu .trait-bleu {
+  text-align: center;
   margin-left: 20px;
   margin-right: 20px;
   background: no-repeat left url("../../images/ligne10.png"), no-repeat right url("../../images/ligne11.png");
 }
 #LDDP.menu .trait-bleu-clair {
+  text-align: center;
   margin-left: 20px;
   margin-right: 20px;
   background: no-repeat left url("../../images/ligne12.png"), no-repeat right url("../../images/ligne13.png");
 }
 
-#LPDG.menu h3 {
+#LPDG.menu .trait {
+  text-align: center;
   margin-left: 30px;
   margin-right: 30px;
   background: no-repeat left url("../../images/ligne14.png"), no-repeat right url("../../images/ligne15.png");
 }
 
 /* ----------------------------------------------- */
+.menu h3 {
+  display: inline-block;
+  margin: auto;
+  background: linear-gradient(to top, black 0%, black 5%, transparent 5.01%) no-repeat left bottom;
+  background-size: 0 100%;
+  transition: background-size 0.5s;
+}
+.menu h3:hover {
+  background-size: 100% 100%;
+}
 
 /*# sourceMappingURL=style.css.map */
