--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -179,6 +179,8 @@ $color-primary:rgb(87,156,135);
     }
   }
 
+ 
+
 
 /* PAGE DU MENU */
     .box{
@@ -236,51 +238,79 @@ $color-primary:rgb(87,156,135);
     }
 /* ----------------------------------------------- */
 
+
+ 
+
+
 /* TRAIT DE SEPARATION */
-    #LNE.menu{
-        h3{
-            background: no-repeat left url("../../images/ligne1.png"), no-repeat right url("../../images/ligne1.png");
-        }
+
+#LNE.menu{
+    .trait{
+        text-align:center;
+        background: no-repeat left url("../../images/ligne1.png"), no-repeat right url("../../images/ligne1.png");
     }
-    #LCALF.menu{
-        .orange h3{
-            margin-left: -70px;
-            margin-right: -70px;
-            background: no-repeat left url("../../images/ligne2.png"), no-repeat right url("../../images/ligne3.png");
-        }
-        .violet h3{
-            margin-left: -70px;
-            margin-right: -70px;
-            background: no-repeat left url("../../images/ligne4.png"), no-repeat right url("../../images/ligne5.png");
-        }
-        .bleu h3{
-            margin-left: -70px;
-            margin-right: -70px;
-            background: no-repeat left url("../../images/ligne6.png"), no-repeat right url("../../images/ligne7.png");
-        }
+}
+
+#LCALF.menu{
+    .orange .trait{
+        text-align:center;
+        margin-left: -70px;
+        margin-right: -70px;
+        background: no-repeat left url("../../images/ligne2.png"), no-repeat right url("../../images/ligne3.png");
     }
-    #LDDP.menu{
-        .trait-bleu-fonce{
-            margin-left: 20px;
-            margin-right: 20px;
-            background: no-repeat left url("../../images/ligne8.png"), no-repeat right url("../../images/ligne9.png");
-        }
-        .trait-bleu{
-            margin-left: 20px;
-            margin-right: 20px;
-            background: no-repeat left url("../../images/ligne10.png"), no-repeat right url("../../images/ligne11.png");
-        }
-        .trait-bleu-clair{
-            margin-left: 20px;
-            margin-right: 20px;
-            background: no-repeat left url("../../images/ligne12.png"), no-repeat right url("../../images/ligne13.png");
-        }
+    .violet .trait{
+        text-align:center;
+        margin-left: -70px;
+        margin-right: -70px;
+        background: no-repeat left url("../../images/ligne4.png"), no-repeat right url("../../images/ligne5.png");
     }
-    #LPDG.menu{
-        h3{
-            margin-left: 30px;
-            margin-right: 30px;
-            background: no-repeat left url("../../images/ligne14.png"), no-repeat right url("../../images/ligne15.png");
-        }
+    .bleu .trait{
+        text-align:center;
+        margin-left: -70px;
+        margin-right: -70px;
+        background: no-repeat left url("../../images/ligne6.png"), no-repeat right url("../../images/ligne7.png");
     }
+}
+#LDDP.menu{
+    .trait-bleu-fonce{
+        text-align:center;
+        margin-left: 20px;
+        margin-right: 20px;
+        background: no-repeat left url("../../images/ligne8.png"), no-repeat right url("../../images/ligne9.png");
+    }
+    .trait-bleu{
+        text-align:center;
+        margin-left: 20px;
+        margin-right: 20px;
+        background: no-repeat left url("../../images/ligne10.png"), no-repeat right url("../../images/ligne11.png");
+    }
+    .trait-bleu-clair{
+        text-align:center;
+        margin-left: 20px;
+        margin-right: 20px;
+        background: no-repeat left url("../../images/ligne12.png"), no-repeat right url("../../images/ligne13.png");
+    }
+}
+#LPDG.menu{
+    .trait{
+        text-align:center;
+        margin-left: 30px;
+        margin-right: 30px;
+        background: no-repeat left url("../../images/ligne14.png"), no-repeat right url("../../images/ligne15.png");
+    }
+}
 /* ----------------------------------------------- */
+
+.menu{
+    h3 {
+        display: inline-block;
+        margin:auto;
+        background: linear-gradient(to top, rgba(0, 0, 0) 0%, rgba(0, 0, 0) 5%, transparent 5.01%) no-repeat left bottom;
+        background-size: 0 100%;
+        transition: background-size .5s;
+    }
+    
+    h3:hover {
+        background-size: 100% 100%;
+    }
+}
