--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -65,23 +65,56 @@
 }
 
 /* ----------------------------------------------- */
-/* GENERALE */
-h3 {
-  font-size: 45px;
-}
-
-a {
-  text-decoration: none;
-}
-
-h1 {
-  font-size: 50px;
+#LNE.menu .trait {
   text-align: center;
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  background: no-repeat left url("../../images/ligne1.png"), no-repeat right url("../../images/ligne1.png");
 }
 
-/* ----------------------------------------------- */
-/* PAGE D'ACCUEIL */
+#LCALF.menu .orange .trait {
+  text-align: center;
+  margin-left: -70px;
+  margin-right: -70px;
+  background: no-repeat left url("../../images/ligne2.png"), no-repeat right url("../../images/ligne3.png");
+}
+#LCALF.menu .violet .trait {
+  text-align: center;
+  margin-left: -70px;
+  margin-right: -70px;
+  background: no-repeat left url("../../images/ligne4.png"), no-repeat right url("../../images/ligne5.png");
+}
+#LCALF.menu .bleu .trait {
+  text-align: center;
+  margin-left: -70px;
+  margin-right: -70px;
+  background: no-repeat left url("../../images/ligne6.png"), no-repeat right url("../../images/ligne7.png");
+}
+
+#LDDP.menu .trait-bleu-fonce {
+  text-align: center;
+  margin-left: 20px;
+  margin-right: 20px;
+  background: no-repeat left url("../../images/ligne8.png"), no-repeat right url("../../images/ligne9.png");
+}
+#LDDP.menu .trait-bleu {
+  text-align: center;
+  margin-left: 20px;
+  margin-right: 20px;
+  background: no-repeat left url("../../images/ligne10.png"), no-repeat right url("../../images/ligne11.png");
+}
+#LDDP.menu .trait-bleu-clair {
+  text-align: center;
+  margin-left: 20px;
+  margin-right: 20px;
+  background: no-repeat left url("../../images/ligne12.png"), no-repeat right url("../../images/ligne13.png");
+}
+
+#LPDG.menu .trait {
+  text-align: center;
+  margin-left: 30px;
+  margin-right: 30px;
+  background: no-repeat left url("../../images/ligne14.png"), no-repeat right url("../../images/ligne15.png");
+}
+
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -102,6 +135,9 @@ h1 {
   flex-direction: column;
   justify-content: center;
   box-shadow: 0 0.9px 2.4px rgba(0, 0, 0, 0.016), 0 2.2px 6px rgba(0, 0, 0, 0.022), 0 4.4px 12.2px rgba(0, 0, 0, 0.028), 0 9.1px 25.2px rgba(0, 0, 0, 0.034), 0 25px 69px rgba(0, 0, 0, 0.05);
+}
+.container h3 {
+  font-size: 45px;
 }
 .container #LNE {
   background-color: #fcdfdb;
@@ -174,8 +210,121 @@ h1 {
   font-family: "blokletters_balpenbalpen", Arial, Helvetica, sans-serif;
 }
 
-/* ----------------------------------------------- */
-/* BOUTTON */
+h1 {
+  font-size: 50px;
+  text-align: center;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+.box {
+  display: flex;
+}
+.box :first-child {
+  flex: 1;
+  margin-right: 15px;
+}
+
+.menu {
+  font-size: 30px;
+  border-left: 20px;
+  box-shadow: 0 0.9px 2.4px rgba(0, 0, 0, 0.016), 0 2.2px 6px rgba(0, 0, 0, 0.022), 0 4.4px 12.2px rgba(0, 0, 0, 0.028), 0 9.1px 25.2px rgba(0, 0, 0, 0.034), 0 25px 69px rgba(0, 0, 0, 0.05);
+}
+.menu header {
+  text-align: center;
+  margin-top: 50px;
+}
+.menu header h2 {
+  margin-top: 10px;
+  font-size: 55px;
+  margin-bottom: 100px;
+}
+.menu > * {
+  margin-left: 100px;
+  margin-right: 100px;
+}
+.menu h3 {
+  display: inline-block;
+  font-family: "blokletters_balpenbalpen", Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+.menu p {
+  font-family: "blokletters_balpenbalpen", Arial, Helvetica, sans-serif;
+  font-size: 15px;
+}
+.menu .dessert {
+  line-height: 40px;
+}
+.menu footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.menu footer #img-petit {
+  height: 45px;
+  margin: 0px;
+  margin-right: 10px;
+}
+.menu footer h3 {
+  font-size: 35px;
+}
+
+#LNE.menu h3 {
+  background: linear-gradient(to top, #000 0%, #000 5%, transparent 5.01%) no-repeat left bottom;
+  background-size: 0 100%;
+  transition: background-size 0.5s;
+}
+#LNE.menu h3:hover {
+  background-size: 100% 100%;
+}
+
+#LCALF.menu .orange h3 {
+  background: linear-gradient(to top, #c77412 0%, #c77412 5%, transparent 5.01%) no-repeat left bottom;
+  background-size: 0 100%;
+  transition: background-size 0.5s;
+}
+#LCALF.menu .orange h3:hover {
+  background-size: 100% 100%;
+}
+#LCALF.menu .violet h3 {
+  background: linear-gradient(to top, #7738cf 0%, #7738cf 5%, transparent 5.01%) no-repeat left bottom;
+  background-size: 0 100%;
+  transition: background-size 0.5s;
+}
+#LCALF.menu .violet h3:hover {
+  background-size: 100% 100%;
+}
+#LCALF.menu .bleu h3 {
+  background: linear-gradient(to top, #0080ff 0%, #0080ff 5%, transparent 5.01%) no-repeat left bottom;
+  background-size: 0 100%;
+  transition: background-size 0.5s;
+}
+#LCALF.menu .bleu h3:hover {
+  background-size: 100% 100%;
+}
+
+#LDDP.menu h3 {
+  background: linear-gradient(to top, #000 0%, #000 5%, transparent 5.01%) no-repeat left bottom;
+  background-size: 0 100%;
+  transition: background-size 0.5s;
+}
+#LDDP.menu h3:hover {
+  background-size: 100% 100%;
+}
+
+#LPDG.menu h3 {
+  background: linear-gradient(to top, #87D161 0%, #87D161 5%, transparent 5.01%) no-repeat left bottom;
+  background-size: 0 100%;
+  transition: background-size 0.5s;
+}
+#LPDG.menu h3:hover {
+  background-size: 100% 100%;
+}
+
+a {
+  text-decoration: none;
+}
+
 .btn {
   text-align: left;
   padding-left: 60px;
@@ -206,11 +355,6 @@ h1 {
   }
 }
 
-/* ----------------------------------------------- */
-.secouer:hover {
-  animation: wiggle 0.6s ease-in;
-}
-
 @keyframes wiggle {
   10%, 90% {
     transform: rotate(0deg);
@@ -225,131 +369,15 @@ h1 {
     transform: rotate(2deg);
   }
 }
+.secouer:hover {
+  animation: wiggle 0.6s ease-in;
+}
+
 article:hover {
   opacity: 0.5;
 }
 article:hover * {
   transform: scale(1.3);
-}
-
-/* PAGE DU MENU */
-.box {
-  display: flex;
-}
-.box :first-child {
-  flex: 1;
-  margin-right: 15px;
-}
-
-.menu {
-  font-size: 30px;
-  border-left: 20px;
-  box-shadow: 0 0.9px 2.4px rgba(0, 0, 0, 0.016), 0 2.2px 6px rgba(0, 0, 0, 0.022), 0 4.4px 12.2px rgba(0, 0, 0, 0.028), 0 9.1px 25.2px rgba(0, 0, 0, 0.034), 0 25px 69px rgba(0, 0, 0, 0.05);
-}
-.menu header {
-  text-align: center;
-  margin-top: 50px;
-}
-.menu header h2 {
-  margin-top: 10px;
-  font-size: 55px;
-  margin-bottom: 100px;
-}
-.menu > * {
-  margin-left: 100px;
-  margin-right: 100px;
-}
-.menu h3 {
-  text-align: center;
-  margin-top: 50px;
-  margin-bottom: -10px;
-  font-family: "blokletters_balpenbalpen", Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-.menu p {
-  font-family: "blokletters_balpenbalpen", Arial, Helvetica, sans-serif;
-  font-size: 15px;
-}
-.menu .dessert {
-  line-height: 40px;
-}
-.menu footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 30px;
-}
-.menu footer #img-petit {
-  height: 45px;
-  margin: 0px;
-  margin-right: 10px;
-}
-.menu footer h3 {
-  font-size: 35px;
-}
-
-/* ----------------------------------------------- */
-/* TRAIT DE SEPARATION */
-#LNE.menu .trait {
-  text-align: center;
-  background: no-repeat left url("../../images/ligne1.png"), no-repeat right url("../../images/ligne1.png");
-}
-
-#LCALF.menu .orange .trait {
-  text-align: center;
-  margin-left: -70px;
-  margin-right: -70px;
-  background: no-repeat left url("../../images/ligne2.png"), no-repeat right url("../../images/ligne3.png");
-}
-#LCALF.menu .violet .trait {
-  text-align: center;
-  margin-left: -70px;
-  margin-right: -70px;
-  background: no-repeat left url("../../images/ligne4.png"), no-repeat right url("../../images/ligne5.png");
-}
-#LCALF.menu .bleu .trait {
-  text-align: center;
-  margin-left: -70px;
-  margin-right: -70px;
-  background: no-repeat left url("../../images/ligne6.png"), no-repeat right url("../../images/ligne7.png");
-}
-
-#LDDP.menu .trait-bleu-fonce {
-  text-align: center;
-  margin-left: 20px;
-  margin-right: 20px;
-  background: no-repeat left url("../../images/ligne8.png"), no-repeat right url("../../images/ligne9.png");
-}
-#LDDP.menu .trait-bleu {
-  text-align: center;
-  margin-left: 20px;
-  margin-right: 20px;
-  background: no-repeat left url("../../images/ligne10.png"), no-repeat right url("../../images/ligne11.png");
-}
-#LDDP.menu .trait-bleu-clair {
-  text-align: center;
-  margin-left: 20px;
-  margin-right: 20px;
-  background: no-repeat left url("../../images/ligne12.png"), no-repeat right url("../../images/ligne13.png");
-}
-
-#LPDG.menu .trait {
-  text-align: center;
-  margin-left: 30px;
-  margin-right: 30px;
-  background: no-repeat left url("../../images/ligne14.png"), no-repeat right url("../../images/ligne15.png");
-}
-
-/* ----------------------------------------------- */
-.menu h3 {
-  display: inline-block;
-  margin: auto;
-  background: linear-gradient(to top, black 0%, black 5%, transparent 5.01%) no-repeat left bottom;
-  background-size: 0 100%;
-  transition: background-size 0.5s;
-}
-.menu h3:hover {
-  background-size: 100% 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
