--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -9,7 +9,7 @@ $color-primary:rgb(87,156,135);
         background-size: 0 100%;
         transition: background-size .5s;
         &:hover {
-        background-size: 100% 100%;
+            background-size: 100% 100%;
         }
     }
 }
@@ -71,15 +71,17 @@ a {
       
 .secouer{
     &:hover{
-        animation: wiggle 0.6s ease-in;
+        animation: wiggle 0.6s ease-in-out;
     }
 }
 
   article{
     &:hover{
         opacity: .5;
+        transition: opacity 330ms ease-in-out;
         *{
             transform: scale(1.3);
+            transition: transform 330ms ease-in-out;
         }
         
     }
